<resources>
    <string name="app_name">Match Schedule</string>

    <string name="vs">vs</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="goalkeeper">Goalkeeper</string>
    <string name="defense">Defense</string>
    <string name="midfield">Midfield</string>
    <string name="forward">Forward</string>
    <string name="subtitutes">Subtitutes</string>
    <string name="matchFavorites">Favorites</string>
    <string name="home_badge">Home Badge</string>
    <string name="away_badge">Away Badge</string>
    <string name="teams">Teams</string>
    <string name="match">Match</string>
    <string name="team_badge">Team Badge</string>
    <string name="weight_kg">Weight (Kg)</string>
    <string name="height_m">Height (m)</string>
    <string name="fanart">FanArt</string>
    <string name="search">Search</string>
    <string name="nothing_to_see_here">Nothing to see here-yet</string>

    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
