<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.playerDetail.PlayerDetailActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/detail_player_fanart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fanart"/>

        <TextView
                android:id="@+id/player_name_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"/>

        <TextView
                android:id="@+id/player_position_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

            <TextView
                    android:text="@string/weight_kg"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

            <TextView
                    android:text="@string/height_m"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/player_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textColor="@color/colorPrimaryDark"/>

            <TextView
                    android:id="@+id/player_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"/>

        </LinearLayout>

        <TextView
                android:padding="10dp"
                android:id="@+id/player_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>

</ScrollView>